--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "MyFirstProgram"
+
+
+repositories {
+    jcenter()
+}
+ 
+dependencies {
+    testCompile 'org.testng:testng:6.10'
+}
